# Stellar-Earmark

./: .gitignore  Cargo.toml  README.md
contracts/attestation/: Cargo.toml
contracts/attestation/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/streaming/: Cargo.toml
contracts/streaming/src/: lib.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/attest/: page.tsx
frontend/src/app/institutions/: page.tsx
frontend/src/app/receive/: page.tsx
frontend/src/app/send/: page.tsx
frontend/src/components/app/: AccountBar.tsx  CreateModal.tsx  EarmarkCard.tsx  RequireWallet.tsx  StreamCard.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Modal.tsx  StatusBadge.tsx
frontend/src/hooks/: useAttestation.ts  useEarmarks.ts  useInstitutions.ts  useProfile.ts  useStreams.ts  useWallet.ts
frontend/src/lib/: constants.ts  contracts.ts  stellar.ts
frontend/src/store/: walletStore.ts
frontend/src/types/: index.ts
