[workspace]
resolver = "2"
members = [
    "contracts/registry",
    "contracts/attestation",
    "contracts/escrow",
    "contracts/streaming",
]

[workspace.dependencies]
soroban-sdk = { version = "21", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
